--- a/index.html
+++ b/index.html
@@ -401,6 +401,9 @@
           <button class="button" onclick="window.open('https://chatgpt.com/g/g-67b7978e2b00819181890d9e2e15652f-physiklehrer-gabriel', '_blank')">
             PHYSIKLEHRER SIMULATOR GABRIEL ÖFFNEN <i class="fas fa-external-link-alt"></i>
           </button>
+          <button class="button" onclick="window.open('https://chatgpt.com/g/g-67b882b678c88191a6425267a8255738-prufung-physiklehrer-gabriel', '_blank')">
+            PHYSIKLEHRER PRÜFUNG GABRIEL ÖFFNEN <i class="fas fa-external-link-alt"></i>
+          </button>
           <iframe src="https://zaha175.github.io/BILDPUZZLEPLATFORM/" title="PHYSIKLEHRER SIMULATOR GABRIEL"></iframe>
         </li>
         <li>
