--- a/index.html
+++ b/index.html
@@ -398,14 +398,21 @@
       <ul>
         <li>
           Host Alpha - Online
+          <iframe src="https://zaha175.github.io/BILDPUZZLEPLATFORM/" title="PHYSIKLEHRER SIMULATOR GABRIEL"></iframe>
           <button class="button" onclick="window.open('https://chatgpt.com/g/g-67b7978e2b00819181890d9e2e15652f-physiklehrer-gabriel', '_blank')">
             PHYSIKLEHRER SIMULATOR GABRIEL ÖFFNEN <i class="fas fa-external-link-alt"></i>
           </button>
           <button class="button" onclick="window.open('https://chatgpt.com/g/g-67b882b678c88191a6425267a8255738-prufung-physiklehrer-gabriel', '_blank')">
             PHYSIKLEHRER PRÜFUNG GABRIEL ÖFFNEN <i class="fas fa-external-link-alt"></i>
           </button>
-          <iframe src="https://zaha175.github.io/BILDPUZZLEPLATFORM/" title="PHYSIKLEHRER SIMULATOR GABRIEL"></iframe>
-        </li>
+          <button class="button" onclick="window.open('https://chatgpt.com/g/g-67bad47c940081919c0c7b4ba53b4def-prufungprobe-physiklehrer-gabriel', '_blank')">
+            PHYSIKLEHRER PRÜFUNG PROBE GABRIEL ÖFFNEN <i class="fas fa-external-link-alt"></i>
+          </button>
+          <button class="button" onclick="window.open('https://zaha175.github.io/PHYSIKPRUEFUNG/', '_blank')">
+            PHYSIKLEHRER PRÜFUNG PROBE GABRIEL ÖFFNEN <i class="fas fa-external-link-alt"></i>
+          </button>
+          <iframe src="https://zaha175.github.io/PHYSIKPRUEFUNG/" title="PHYSIKLEHRER SIMULATOR GABRIEL"></iframe>
+          </li>
         <li>
           Host Alpha - Online
           <button class="button" onclick="window.open('https://zaha175.github.io/PANNELMARCOFRAGEN/', '_blank')">
