--- a/index.html
+++ b/index.html
@@ -442,8 +442,8 @@
       </button>
       <iframe src="https://zaha175.github.io/PANNELMARCOFRAGEN1/" title="Externe Diagnose 1"></iframe>
     <p>
-   <p><button class="button" onclick="window.open('https://zaha175.github.io/PANNELMARCOFRAGEN1/', '_blank')">CUBSUPER <i class="fas fa-external-link-alt"></i></button></p>
-    <iframe src="https://zaha175.github.io/PANNELMARCOFRAGEN1/" ></iframe>
+   <p><button class="button" onclick="window.open('https://zaha175.github.io/PHYSIKPANNELULTRA/', '_blank')">CUBSUPER <i class="fas fa-external-link-alt"></i></button></p>
+    <iframe src="https://zaha175.github.io/PHYSIKPANNELULTRA/" ></iframe>
     <p>
     </div>
 
