--- a/index.html
+++ b/index.html
@@ -409,6 +409,10 @@
             PHYSIKLEHRER PRÜFUNG PROBE GABRIEL ÖFFNEN <i class="fas fa-external-link-alt"></i>
           </button>
           <iframe src="https://zaha175.github.io/PHYSIKPRUEFUNG/" title="PHYSIKLEHRER SIMULATOR GABRIEL"></iframe>
+          <button class="button" onclick="window.open('https://zaha175.github.io/PRUFUNGALLESLOSUNG/', '_blank')">
+            PHYSIK PRÜFUNG LÖSUNG <i class="fas fa-external-link-alt"></i>
+          </button>
+          <iframe src="https://zaha175.github.io/PRUFUNGALLESLOSUNG/" title="PHYSIK ULTRA NACHHILFE"></iframe>
           <button class="button" onclick="window.open('https://zaha175.github.io/PHYSIKPANNELULTRA/', '_blank')">
             PHYSIK ULTRA NACHHILFE ÖFFNEN <i class="fas fa-external-link-alt"></i>
           </button>
